[gd_scene load_steps=5 format=3 uid="uid://re21twne6clr"]

[ext_resource type="Script" path="res://Scenes/Production Scene/Potions/potion_red_canvas.gd" id="1_weeld"]
[ext_resource type="Texture2D" uid="uid://cf7vsxerm2dwr" path="res://Art/potion_red_test.png" id="2_rfusw"]
[ext_resource type="Texture2D" uid="uid://d3pxmc8yfj8tp" path="res://Art/white_layer.png" id="3_c5ayv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hr4qb"]
radius = 60.0

[node name="potion_red_canvas" type="Node2D"]
script = ExtResource("1_weeld")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rfusw")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("CircleShape2D_hr4qb")

[node name="white_layer" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.305882)
texture = ExtResource("3_c5ayv")

[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
